tests/files/flow_controller_tests/should_run/086.cmdr
x = 1.5;
print csch(x);