tests/files/flow_controller_tests/should_fail/068.cmdr
x = "cat";
print csch(x);